Añadidos los nuevos tipos

--- a/examples/src.html
+++ b/examples/src.html
@@ -16,12 +16,12 @@
 
 <body>
     <h1>Hola</h1>
-    <button href="../scripts/passwordcomparison.html" type="button" class="btn btn-success">
+    <a href="../scripts/passwordcomparison.html" type="button" class="btn btn-success , TypeButton3">
       Success
-    </button>
-    <button href="../scripts/geolocalicador.html" type="button" class="btn btn-success">
+    </a>
+    <a href="../scripts/geolocalicador.html" type="button" class="btn btn-success">
       Success
-    </button>
+    </a>
     <a href="https://www.google.com/search?sxsrf=ALeKk00bkKY0-bsoBr8g7ui9lRGwmBb-Zw:1596382402465&q=Visual+Studio&stick=H4sIAAAAAAAAAONgFuLQz9U3MM7JNVbiBLEMi-IrDbT4nPNzc_PzgjNTUssTK4sXsfKGZRaXJuYoBJeUpmTm72BlBAAed0NmOgAAAA&sa=X&ved=2ahUKEwjl65jw6_zqAhU87uAKHToSC_cQxA0wHXoECAwQCQ&biw=1263&bih=600"
         class="btm btm-dark">Dark</a
     >
